gitpen/src/app/header/header.component.scss
@use '../../styles' as *;

body {
  display: flex;
  margin: 0;
  height: 100vh;
}

.hamburger-wrap {
  width: 100%;
  top: 0;
  padding-top: 80px;
  background-color: white;
  position: fixed;
  &.white {
    display: none;
  }
}

.hamburger {
  font-size: 30px;
  background: none;
  border: none;
  cursor: pointer;
  position: fixed;
  top: 20px;
  left: 15px;
  z-index: 1000;
  &.white {
    display: none;
  }
}

.overlay {
  position: fixed;
  top: 0;
  left: -100%;
  width: 100%;
  height: 100%;
  background: rgb(255 255 255 / 90%); 
  color: black;
  display: flex;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  align-items: center;
  justify-content: center;
  transition: left 0.3s ease-in-out;
  z-index: 999;
  overflow-y: auto;
  backdrop-filter: blur(4px);
  ::-webkit-scrollbar {
      display: none;
  }
  &.open {
    left: 0;
  }
  display: block;
  .logo-container {
    margin-top: 20px;
    padding-bottom: 10px;
    width: 80%;
  }
  .logo-fc {
    height: 120px;
  }
}

.close-btn {
  position: absolute;
  top: 20px;
  right: 30px;
  font-size: 40px;
  background: none;
  border: none;
  color: black;
  cursor: pointer;
}

.folderContainer {
  margin-left: 25px;
  max-height: 95vh;
  overflow-y: auto;
  ::-webkit-scrollbar {
    display: none;
  }
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  text-align: left;
  display: block;
  li {
    cursor: pointer;
    margin: 5px 0;
    display: block;
    text-align: left;
    padding-left: 10px;
    .folder-icon, .file-icon {
      width: 20px;
      height: 20px;
      margin-right: 8px;
    }
    .expand-collapse {
      font-size: 18px;
      margin-right: 10px;
      cursor: pointer;
    }
  }
  ul {
    margin-left: 10px;
    padding-left: 0;
    margin-top: 10px;
    display: block;
  }
}
.folder-content {
  overflow: hidden;
  transition: max-height 0.1s ease-in-out;
  max-height: 0;
  &.expanded {
    max-height: 3000px;
  }
}

.li.expanded .folder-content {
  transition: max-height 0.1s ease-in-out;
}

li {
  ul {
    display: block;
    margin-left: 5px;
  }
}

@media (min-width: 768px) {
  .overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: $fcWidth;
    border-right: 1px solid rgba(0, 0, 0, 0.1);
    box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.1)
  }
  .main-content {
    margin-left: fcWidth;
    width: calc(100% - $fcWidth);
    transition: margin-left 0.1s ease-in-out;
  }

  span:hover, .folder-icon:hover, .file-icon:hover {
    opacity: 0.4;
  }


  .hamburger-wrap {
    display: none;
  }

  .hamburger {
    display: none;
  }

  .close-btn {
    display: none;
  }

  .folderContainer {
    margin-left: 20px;
  }

  .logo-container {
    text-align: center;
  }
}

@media (max-width: 768px) {
  .overlay {
    left: -100%;
  }

  .hamburger {
    display: block;
  }

  .main-content {
    margin-left: 0;
    width: 100%;
  }
  .logo-container {
    text-align: left;
  }
}

